# Baukasten

./: .editorconfig  .gitignore  CMakeLists.txt  MeshImpl  ProgramImpl  README.md  ShaderImpl  TextureImpl  base.h  bitmap.cpp  camera.cpp  camera.h  debug.h  default.frag  default.vert  drawable.cpp  drawable.h  filesystem.cpp  filesystem.h  identity.cpp  identity.h  imesh.h  iprogram.h  ishader.h  itexture.h  main.cpp  managed.cpp  managed.h  mesh.cpp  mesh.h  model.cpp  model.h  offer.txt  program.cpp  program.h  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  (+3 more)
src/: CMakeLists.txt  base.h  main.cpp
src/core/: Assert  CMakeLists.txt  Debug  Global  Identity  Managed
src/core/inc/: assert.h  debug.h  global.h  identity.h  managed.h
src/core/src/: identity.cpp  managed.cpp
src/graphics/: Animation  CMakeLists.txt  Camera  Context  ContextImpl  Display  DisplayImpl  Font  Form  Global  Graphics  GraphicsImpl  GraphicsInc  IContext  IDisplay  IForm  IGraphics  IMesh  IProgram  ITexture  Mesh  MeshImpl  Program  ProgramImpl  Shader  ShaderImpl  TextForm  Texture  TextureImpl  VertexFormat
src/graphics/inc/: animation.h  bitmap.h  camera.h  context.h  display.h  font.h  form.h  global.h  graphics.h  (+16 more)
src/input/: CMakeLists.txt  Global  IInput  IKeyboard  IMouse  InputImpl  KeyboardImpl  MouseImpl
src/io/: CMakeLists.txt  Event  EventManager  Global  IObserver  InputEvent
src/math/: CMakeLists.txt  Global  Math  Matrix  Plane  Quaternion  Random  Vector  Vector2  Vector3
src/model/: Action  Actor  ActorType  CMakeLists.txt  Global  IState  Model  State
(+121 files in other folders)
